feat(retrieval): add exact metadata query planner fast path