@@ -1,6 +1,7 @@
 package cn.iocoder.yudao.module.retrieval.service.search;
 
 import cn.hutool.core.util.StrUtil;
+import cn.hutool.json.JSONUtil;
 import cn.iocoder.yudao.framework.security.core.util.SecurityFrameworkUtils;
 import cn.iocoder.yudao.module.ingestion.api.dto.ChunkDocInfoDTO;
 import cn.iocoder.yudao.module.knowledge.api.KnowledgeApi;
@@ -22,42 +23,28 @@ import java.util.Set;
 import java.util.stream.Collectors;
 
 /**
- * 检索编排: 语义理解/改写 → 双通道召回(BM25 + 向量) → RRF 融合 → 权限/已发布过滤 → 重排 → 响应
+ * 检索编排: 查询分析 → Query Planner → Exact/Scoped/Hybrid 检索 → 响应。
  * <p>
- * 降级原则(业务效果优先): 单环节失败不阻断主链路, 允许"空手而归"的最小集是空结果而非报错
- * <p>
- * Task 3 动态意图: 检索前按 kbIds 拉取知识库意图集注入查询分析(意图 = 知识库意图名 | OUT_OF_SCOPE);
- * RPC 失败/无意图时回退固定枚举, 不阻断主链路。
+ * EXACT_METADATA 已走确定性快路径: 精确定位 documentId 后只取一个已发布来源锚点，
+ * 跳过 embedding / vector / RRF / rerank；答案由 Evidence 层直接读取 chunk metadata。
  */
 @Slf4j
 @Service
 public class SearchService {
 
-    /** 召回/重排候选上限(控制 LLM 打分成本) */
     private static final int RECALL_TOP_K = 20;
-    /** 检索变体上限 */
     private static final int VARIANT_LIMIT = 6;
 
-    @Resource
-    private QueryAnalysisService queryAnalysisService;
-    @Resource
-    private KnowledgeApi knowledgeApi;
-    @Resource
-    private Bm25Searcher bm25Searcher;
-    @Resource
-    private VectorSearcher vectorSearcher;
-    @Resource
-    private RrfMerger rrfMerger;
-    @Resource
-    private Reranker reranker;
-    @Resource
-    private ResultFilter resultFilter;
-    @Resource
-    private ModelApi modelApi;
-    @Resource
-    private cn.iocoder.yudao.module.retrieval.service.domain.DomainQueryPolicyRegistry domainPolicyRegistry;
-    @Resource
-    private cn.iocoder.yudao.module.retrieval.dal.mysql.trace.RetrievalTraceMapper retrievalTraceMapper;
+    @Resource private QueryAnalysisService queryAnalysisService;
+    @Resource private KnowledgeApi knowledgeApi;
+    @Resource private Bm25Searcher bm25Searcher;
+    @Resource private VectorSearcher vectorSearcher;
+    @Resource private RrfMerger rrfMerger;
+    @Resource private Reranker reranker;
+    @Resource private ResultFilter resultFilter;
+    @Resource private ModelApi modelApi;
+    @Resource private cn.iocoder.yudao.module.retrieval.service.domain.DomainQueryPolicyRegistry domainPolicyRegistry;
+    @Resource private cn.iocoder.yudao.module.retrieval.dal.mysql.trace.RetrievalTraceMapper retrievalTraceMapper;
 
     public RetrievalRespVO search(RetrievalReqVO req) {
         return search(req.getQuery(), req.getKbIds(), req.getTopK(),
@@ -65,31 +52,20 @@ public class SearchService {
                 SecurityFrameworkUtils.getLoginUserId());
     }
 
-    /**
-     * 检索(显式租户/用户版本, 供 RPC 调用: 无登录态, 租户/权限由调用方传递; 单轮, 无上下文)
-     */
     public RetrievalRespVO search(String query, List<Long> reqKbIds, Integer topK, Long tenantId, Long userId) {
         return search(query, reqKbIds, topK, tenantId, userId, null);
     }
 
-    /**
-     * 检索(显式租户/用户版本, 供 RPC 调用: 无登录态, 租户/权限由调用方传递; 支持多轮上下文)
-     *
-     * @param history 上下文轮次(可选, 空/ null = 单轮; 已接入查询分析做历史消歧)
-     */
     public RetrievalRespVO search(String query, List<Long> reqKbIds, Integer topK, Long tenantId, Long userId,
                                   List<ChatTurnDTO> history) {
-        long startMs = System.currentTimeMillis(); // F5 检索追踪耗时
-        // 1. 参数归一: topK 默认 5, 上限 20
+        long startMs = System.currentTimeMillis();
         int topKFinal = topK == null || topK <= 0 ? 5 : Math.min(topK, RECALL_TOP_K);
 
-        // 2. 权限前置: 可见知识库计算 + 空集短路(在 LLM 调用之前, 避免无效消耗且防越权泄露)
+        // 1. 权限前置
         Set<Long> visibleKbIds = resultFilter.getVisibleKbIds(userId);
         List<Long> kbIds = reqKbIds != null && !reqKbIds.isEmpty()
                 ? reqKbIds.stream().filter(visibleKbIds::contains).distinct().collect(Collectors.toList())
                 : new ArrayList<>(visibleKbIds);
-        // ⚠️ 权限边界: 交集为空(请求只含不可见知识库 / 可见集获取失败)必须短路返回空,
-        //    否则双检索器把空 kbIds 当"不限", 泄露不可见知识库内容(越权 0 容忍)
         if (kbIds.isEmpty()) {
             log.warn("[search][query={} 无可见知识库, 返回空]", query);
             RetrievalRespVO empty = new RetrievalRespVO();
@@ -100,32 +76,13 @@ public class SearchService {
             return empty;
         }
 
-        // 3. 语义理解/改写/拆解: 变体 = 原句 + (改写 + 子问题), 去重限 6
-        //    Task 2: history 融入查询分析(指代展开/实体继承); LLM 失败时规则兜底改写仍参与召回
-        //    Task 3: 按 kbIds 解析知识库意图集注入动态分类; 意图为空(RPC 失败/知识库无意图)回退固定枚举
+        // 2. 领域 + 查询分析。PATENT EXACT_METADATA 在 QueryAnalysisService 内会规则短路 LLM。
         List<IntentDTO> intents = resolveIntents(kbIds, userId);
         cn.iocoder.yudao.module.retrieval.service.domain.DomainQueryPolicy domainPolicy = resolveDomainPolicy(kbIds);
         QueryAnalysis analysis = queryAnalysisService.analyze(query, history, intents, domainPolicy);
-        List<String> variants = new ArrayList<>();
-        variants.add(query);
-        if (analysis.isSuccess()) {
-            if (analysis.getRewrites() != null) {
-                variants.addAll(analysis.getRewrites());
-            }
-            if (analysis.getSubQuestions() != null) {
-                variants.addAll(analysis.getSubQuestions());
-            }
-        } else if (analysis.getRewrites() != null && !analysis.getRewrites().isEmpty()) {
-            // 规则兜底(LLM 失败 + 历史合并): 仅补充改写参与召回, 无实体/子问题, 不提升 success
-            variants.addAll(analysis.getRewrites());
-        }
-        variants = variants.stream().distinct().limit(VARIANT_LIMIT).collect(Collectors.toList());
 
-        // 3.5 超范围意图短路(Task 4): 动态意图解析为 OUT_OF_SCOPE 时不检索不硬答, 拒绝作答并转人工。
-        //     仅知识库意图集路径(有 kbIds 意图)会产生 OUT_OF_SCOPE; 无意图集回退路径恒为固定枚举, 不受影响。
-        //     置于所有检索调用(BM25/向量/重排/LLM)之前, 避免无效消耗。
         if ("OUT_OF_SCOPE".equals(analysis.getIntent())) {
-            log.info("[search][query={} 意图 OUT_OF_SCOPE, 跳过检索并阻断作答, 转人工]", query);
+            log.info("[search][query={} 意图 OUT_OF_SCOPE, 跳过检索并阻断作答]", query);
             RetrievalRespVO blocked = new RetrievalRespVO();
             blocked.setQuery(query);
             blocked.setAnalysis(buildAnalysis(analysis));
@@ -137,11 +94,10 @@ public class SearchService {
             return blocked;
         }
 
-        // 3.6 D2 scope 硬过滤: 查询命中省市/产品 slot 时, 有 scope 配置的知识库必须匹配
-        //     (精确城市>省级; 无 scope 配置的知识库不受影响, 兼容现状; scope RPC 失败降级不过滤+告警)
-        java.util.List<Long> scopedKbIds = applyScopeFilter(analysis, kbIds);
+        // 3. 通用 scope 过滤
+        List<Long> scopedKbIds = applyScopeFilter(analysis, kbIds);
         if (scopedKbIds.isEmpty()) {
-            log.warn("[search][query={} 地域/产品范围过滤后无可用知识库, 拒绝混合不同地市规则, 转人工]", query);
+            log.warn("[search][query={} 地域/产品范围过滤后无可用知识库, 转人工]", query);
             RetrievalRespVO blocked = new RetrievalRespVO();
             blocked.setQuery(query);
             blocked.setAnalysis(buildAnalysis(analysis));
@@ -154,7 +110,22 @@ public class SearchService {
         }
         kbIds = scopedKbIds;
 
-        // 4. BM25 通道: 逐变体召回, 去重取最高分
+        // 4. Query Planner: EXACT_METADATA 直接走精确文档来源锚点，不进入通用 Hybrid RAG。
+        if ("EXACT_METADATA".equals(resolveRoute(analysis))) {
+            return searchExactMetadata(query, analysis, kbIds, tenantId, startMs);
+        }
+
+        // 5. 通用/Scoped/ExactClaim 当前仍复用 Hybrid 主链；PATENT 精确编号由 BM25 + Reranker hard filter 保证不串文档。
+        List<String> variants = new ArrayList<>();
+        variants.add(query);
+        if (analysis.isSuccess()) {
+            if (analysis.getRewrites() != null) variants.addAll(analysis.getRewrites());
+            if (analysis.getSubQuestions() != null) variants.addAll(analysis.getSubQuestions());
+        } else if (analysis.getRewrites() != null && !analysis.getRewrites().isEmpty()) {
+            variants.addAll(analysis.getRewrites());
+        }
+        variants = variants.stream().distinct().limit(VARIANT_LIMIT).collect(Collectors.toList());
+
         List<Map.Entry<Long, Double>> bm25Hits = new ArrayList<>();
         for (String variant : variants) {
             bm25Hits.addAll(bm25Searcher.search(variant, tenantId, kbIds, RECALL_TOP_K));
@@ -162,65 +133,47 @@ public class SearchService {
         bm25Hits = dedupMax(bm25Hits);
         Set<Long> bm25HitIds = bm25Hits.stream().map(Map.Entry::getKey).collect(Collectors.toSet());
 
-        // 5. 向量通道: 变体整体 embedding → Milvus 召回(embedding 失败跳过该通道)
-        List<Map.Entry<Long, Double>> vectorHits = vectorSearch(variants, tenantId, kbIds);
-        vectorHits = dedupMax(vectorHits);
+        List<Map.Entry<Long, Double>> vectorHits = dedupMax(vectorSearch(variants, tenantId, kbIds));
         Set<Long> vectorHitIds = vectorHits.stream().map(Map.Entry::getKey).collect(Collectors.toSet());
 
-        // 6. RRF 融合 Top20
         List<Map.Entry<Long, Double>> fused = rrfMerger.merge(List.of(bm25Hits, vectorHits), RECALL_TOP_K);
         Map<Long, Double> rrfMap = fused.stream().collect(Collectors.toMap(Map.Entry::getKey, Map.Entry::getValue));
 
-        // 7. 已发布过滤(Milvus 无状态标量, 融合后统一判定)
-        Set<Long> published = resultFilter.filterPublished(fused.stream().map(Map.Entry::getKey).collect(Collectors.toSet()));
+        Set<Long> published = resultFilter.filterPublished(
+                fused.stream().map(Map.Entry::getKey).collect(Collectors.toSet()));
         List<Map.Entry<Long, Double>> candidates = fused.stream()
                 .filter(e -> published.contains(e.getKey()))
                 .collect(Collectors.toList());
 
-        // 8. 内容补全(顺序与候选一致, 缺失给空串)
         List<Long> candidateIds = candidates.stream().map(Map.Entry::getKey).collect(Collectors.toList());
         Map<Long, String> contentsMap = resultFilter.getChunkContents(candidateIds);
-        List<String> contents = candidateIds.stream()
-                .map(id -> contentsMap.getOrDefault(id, "")).collect(Collectors.toList());
-
-        // 9. 文档信息补全(chunkId -> documentId/documentName/versionNo)
+        List<String> contents = candidateIds.stream().map(id -> contentsMap.getOrDefault(id, "")).toList();
         Map<Long, ChunkDocInfoDTO> docInfoMap = resultFilter.getChunkDocInfo(candidateIds);
-
-        // 9.1 片段元数据(专利来源卡片: applicationNo/publicationNo/sectionType/claimNo/pageStart 等)
         Map<Long, String> metadataMap = resultFilter.getChunkMetadatas(candidateIds);
 
-        // 9.5 父子扩展(B3): 命中子块批量取父块上下文(去重 + token 预算, 供引用时回带完整章节)
         Map<Long, Long> parentMap = resultFilter.getChunkParents(candidateIds);
-        java.util.Set<Long> parentIds = parentMap.values().stream()
-                .filter(java.util.Objects::nonNull).collect(Collectors.toSet());
-        Map<Long, String> parentContents = parentIds.isEmpty() ? Map.of()
-                : resultFilter.getChunkContents(parentIds);
-        int contextBudget = 1000; // 父块上下文总预算(字符)
+        Set<Long> parentIds = parentMap.values().stream().filter(java.util.Objects::nonNull).collect(Collectors.toSet());
+        Map<Long, String> parentContents = parentIds.isEmpty() ? Map.of() : resultFilter.getChunkContents(parentIds);
+        int contextBudget = 1000;
         int contextUsed = 0;
-        java.util.Map<Long, String> truncatedParents = new java.util.HashMap<>();
-        for (java.util.Map.Entry<Long, String> e : parentContents.entrySet()) {
-            if (contextUsed >= contextBudget) {
-                break;
-            }
+        Map<Long, String> truncatedParents = new java.util.HashMap<>();
+        for (Map.Entry<Long, String> e : parentContents.entrySet()) {
+            if (contextUsed >= contextBudget) break;
             String content = e.getValue() == null ? "" : e.getValue();
             String truncated = content.length() > 300 ? content.substring(0, 300) : content;
             truncatedParents.put(e.getKey(), truncated);
             contextUsed += truncated.length();
         }
 
-        // 10. 重排(候选为空或全部内容缺失时跳过模型调用, 避免无意义开销)
         List<Map.Entry<Integer, Float>> reranked;
         boolean allBlank = contents.isEmpty() || contents.stream().allMatch(StrUtil::isBlank);
         if (allBlank) {
             reranked = new ArrayList<>();
-            for (int i = 0; i < contents.size(); i++) {
-                reranked.add(Map.entry(i, 0F)); // 保持 RRF 顺序
-            }
+            for (int i = 0; i < contents.size(); i++) reranked.add(Map.entry(i, 0F));
         } else {
             reranked = reranker.rerank(query, contents);
         }
 
-        // 11. 组装响应
         RetrievalRespVO resp = new RetrievalRespVO();
         resp.setQuery(query);
         resp.setAnalysis(buildAnalysis(analysis));
@@ -232,70 +185,117 @@ public class SearchService {
 
         List<RetrievalRespVO.ResultVO> results = new ArrayList<>();
         for (Map.Entry<Integer, Float> r : reranked) {
-            if (results.size() >= topKFinal) {
-                break;
-            }
+            if (results.size() >= topKFinal) break;
             int idx = r.getKey();
-            if (idx < 0 || idx >= candidates.size()) {
-                continue;
-            }
+            if (idx < 0 || idx >= candidates.size()) continue;
             Long chunkId = candidates.get(idx).getKey();
             results.add(buildResult(chunkId, contentsMap, docInfoMap, rrfMap, r.getValue(),
                     bm25HitIds, vectorHitIds, parentMap, truncatedParents, metadataMap));
         }
         resp.setResults(results);
-        recordTrace(query, resp, variants.size(), startMs); // F5 检索追踪
-        // 12. 产品/品牌一致性门禁(结构化代码判定, 不依赖 LLM 提示词):
-        //     问题明确涉及产品而证据文档均不覆盖该产品 -> 拒绝作答, 明示原因。
-        //     降级原则(degrade-never-block): 检索有结果但文档信息 RPC 失败(docInfoMap 为空)
-        //     时跳过门禁(无法判定=不误伤), 仅告警; 仅当确知结果集的产品归属且均不匹配时才阻断。
+        recordTrace(query, resp, variants.size(), startMs);
+
+        // 产品门禁仅 GENERAL 等启用领域执行；PATENT 关闭。
         List<String> questionProducts = analysis.getProducts() == null ? List.of() : analysis.getProducts();
-        // 领域策略: 专利领域关闭产品/品牌一致性门禁(不破坏 GENERAL 客服场景)
-        if (!domainPolicy.enableProductGate()) {
-            questionProducts = List.of();
-        }
+        if (!domainPolicy.enableProductGate()) questionProducts = List.of();
         boolean docInfoUnavailable = !results.isEmpty() && (docInfoMap == null || docInfoMap.isEmpty());
         if (docInfoUnavailable) {
-            log.warn("[search][query={} 文档信息获取失败, 跳过产品/品牌一致性门禁(降级)]", query);
+            log.warn("[search][query={} 文档信息获取失败, 跳过产品/品牌一致性门禁]", query);
         }
         Set<String> docProducts = docInfoUnavailable ? Set.of() : collectDocProducts(results, docInfoMap);
-        boolean productMatch = docInfoUnavailable
-                || questionProducts.isEmpty()
+        boolean productMatch = docInfoUnavailable || questionProducts.isEmpty()
                 || questionProducts.stream().anyMatch(p ->
-                        docProducts.stream().anyMatch(dp -> dp.contains(p) || p.contains(dp)));
+                docProducts.stream().anyMatch(dp -> dp.contains(p) || p.contains(dp)));
         if (!productMatch) {
             resp.setAnswerBlocked(true);
             resp.setAnswerReason("问题涉及产品「" + String.join("、", questionProducts)
                     + "」, 现有资料仅覆盖「" + (docProducts.isEmpty() ? "无" : String.join("、", docProducts))
                     + "」, 无法确认其政策, 拒绝作答");
-            resp.setAnswer(null);
-        } else {
-            // 13. 双回答者收敛(2026-08-21): 检索只负责召回/重排/门禁, 不再自己生成 answer。
-            //     答案统一由证据管线(EvidenceService.evaluate → AnswerPipeline)产出——
-            //     带充分性判定/冲突检测/Claim 逐句验证, 与对话工作台同一链路, 避免两套回答不一致。
-            //     前端检索测试页已并行展示证据评估结果, 此处 answer 恒为 null。
-            resp.setAnswer(null);
         }
+        resp.setAnswer(null);
         return resp;
     }
 
     /**
-     * 领域路由(任务书 8.1): 单知识库/多知识库同领域 → 该领域策略; 跨领域 → 拒绝;
-     * 无法获取/为空 → 回退 GENERAL。
+     * PATENT EXACT_METADATA 快路径。
+     * <p>
+     * 只需要一个已发布 chunk 作为 Citation 锚点，因为整份专利的著录字段已复制到每个 chunk metadata。
+     * 这里不做 embedding/vector/RRF/rerank，真正做到“结构化事实不走语义检索”。
      */
-    private cn.iocoder.yudao.module.retrieval.service.domain.DomainQueryPolicy resolveDomainPolicy(java.util.List<Long> kbIds) {
-        if (kbIds == null || kbIds.isEmpty()) {
-            return domainPolicyRegistry.get("GENERAL");
+    private RetrievalRespVO searchExactMetadata(String query, QueryAnalysis analysis, List<Long> kbIds,
+                                                Long tenantId, long startMs) {
+        List<Map.Entry<Long, Double>> exactHits = bm25Searcher.searchExactDocument(query, tenantId, kbIds, RECALL_TOP_K);
+        List<Long> exactIds = exactHits.stream().map(Map.Entry::getKey).distinct().toList();
+
+        RetrievalRespVO resp = new RetrievalRespVO();
+        resp.setQuery(query);
+        resp.setAnalysis(buildAnalysis(analysis));
+        RetrievalRespVO.ChannelStatVO stat = new RetrievalRespVO.ChannelStatVO();
+        stat.setBm25(exactIds.size());
+        stat.setVector(0);
+        stat.setFused(0);
+        resp.setChannels(stat);
+        resp.setAnswer(null);
+
+        if (exactIds.isEmpty()) {
+            resp.setResults(List.of());
+            recordTrace(query, resp, 1, startMs);
+            log.info("[searchExactMetadata][query={} 未找到精确专利文档来源锚点]", query);
+            return resp;
         }
+
+        // MySQL publish 状态再次校验，避免 ES 残留索引被当成有效来源。
+        Set<Long> published = resultFilter.filterPublished(new HashSet<>(exactIds));
+        List<Long> publishedIds = exactIds.stream().filter(published::contains).toList();
+        if (publishedIds.isEmpty()) {
+            resp.setResults(List.of());
+            recordTrace(query, resp, 1, startMs);
+            return resp;
+        }
+
+        Map<Long, String> metadataMap = resultFilter.getChunkMetadatas(publishedIds);
+        Long anchorId = chooseExactMetadataAnchor(publishedIds, metadataMap);
+        Map<Long, String> contentsMap = resultFilter.getChunkContents(List.of(anchorId));
+        Map<Long, ChunkDocInfoDTO> docInfoMap = resultFilter.getChunkDocInfo(List.of(anchorId));
+
+        RetrievalRespVO.ResultVO result = buildResult(
+                anchorId,
+                contentsMap,
+                docInfoMap,
+                Map.of(anchorId, 1D),
+                null,
+                Set.of(anchorId),
+                Set.of(),
+                Map.of(),
+                Map.of(),
+                metadataMap);
+        resp.setResults(List.of(result));
+        recordTrace(query, resp, 1, startMs);
+        log.info("[searchExactMetadata][PATENT EXACT_METADATA 快路径, skip embedding/vector/RRF/rerank, chunkId={}, elapsedMs={}]",
+                anchorId, System.currentTimeMillis() - startMs);
+        return resp;
+    }
+
+    private Long chooseExactMetadataAnchor(List<Long> ids, Map<Long, String> metadataMap) {
+        for (Long id : ids) {
+            String metadata = metadataMap.get(id);
+            if (StrUtil.isBlank(metadata)) continue;
+            try {
+                if ("BIBLIOGRAPHIC".equalsIgnoreCase(JSONUtil.parseObj(metadata).getStr("sectionType"))) return id;
+            } catch (Exception ignore) {
+                // 历史脏 metadata 不阻断，回退第一条已发布 chunk。
+            }
+        }
+        return ids.get(0);
+    }
+
+    private cn.iocoder.yudao.module.retrieval.service.domain.DomainQueryPolicy resolveDomainPolicy(List<Long> kbIds) {
+        if (kbIds == null || kbIds.isEmpty()) return domainPolicyRegistry.get("GENERAL");
         try {
-            java.util.Map<Long, String> domains = knowledgeApi.getKbDomainCodes(kbIds).getCheckedData();
-            if (domains == null || domains.isEmpty()) {
-                return domainPolicyRegistry.get("GENERAL");
-            }
-            java.util.Set<String> unique = new java.util.HashSet<>(domains.values());
-            if (unique.size() == 1) {
-                return domainPolicyRegistry.get(unique.iterator().next());
-            }
+            Map<Long, String> domains = knowledgeApi.getKbDomainCodes(kbIds).getCheckedData();
+            if (domains == null || domains.isEmpty()) return domainPolicyRegistry.get("GENERAL");
+            Set<String> unique = new HashSet<>(domains.values());
+            if (unique.size() == 1) return domainPolicyRegistry.get(unique.iterator().next());
             if (unique.size() > 1) {
                 log.warn("[resolveDomainPolicy][跨领域知识库, 拒绝检索: {}]", domains);
                 throw new cn.iocoder.yudao.framework.common.exception.ServiceException(
@@ -309,44 +309,31 @@ public class SearchService {
         return domainPolicyRegistry.get("GENERAL");
     }
 
-    /**
-     * D2 scope 硬过滤: 查询命中省市/产品 slot 时, 有 scope 配置的知识库必须匹配;
-     * 无 scope 配置的知识库不受影响; scope RPC 失败降级不过滤(项目降级原则)并告警。
-     */
-    private java.util.List<Long> applyScopeFilter(QueryAnalysis analysis, java.util.List<Long> kbIds) {
+    private List<Long> applyScopeFilter(QueryAnalysis analysis, List<Long> kbIds) {
         boolean hasProvince = StrUtil.isNotBlank(analysis.getProvince());
         boolean hasCity = StrUtil.isNotBlank(analysis.getCity());
         boolean hasProduct = analysis.getProducts() != null && !analysis.getProducts().isEmpty();
-        if ((!hasProvince && !hasCity && !hasProduct) || kbIds == null || kbIds.isEmpty()) {
-            return kbIds;
-        }
-        java.util.Map<Long, List<cn.iocoder.yudao.module.knowledge.api.dto.KnowledgeScopeDTO>> scopes;
+        if ((!hasProvince && !hasCity && !hasProduct) || kbIds == null || kbIds.isEmpty()) return kbIds;
+
+        Map<Long, List<cn.iocoder.yudao.module.knowledge.api.dto.KnowledgeScopeDTO>> scopes;
         try {
             scopes = knowledgeApi.getKbScopes(kbIds).getCheckedData();
         } catch (Exception e) {
             log.warn("[applyScopeFilter][scope RPC 失败, 降级不过滤: {}]", e.getMessage());
             return kbIds;
         }
-        if (scopes == null || scopes.isEmpty()) {
-            return kbIds; // 无 scope 配置, 兼容现状
-        }
-        java.util.List<Long> filtered = new java.util.ArrayList<>();
+        if (scopes == null || scopes.isEmpty()) return kbIds;
+
+        List<Long> filtered = new ArrayList<>();
         for (Long kbId : kbIds) {
-            java.util.List<cn.iocoder.yudao.module.knowledge.api.dto.KnowledgeScopeDTO> kbScopes = scopes.get(kbId);
-            if (kbScopes == null || kbScopes.isEmpty()) {
-                filtered.add(kbId);
-                continue;
-            }
-            if (scopeMatches(analysis, kbScopes)) {
-                filtered.add(kbId);
-            }
+            List<cn.iocoder.yudao.module.knowledge.api.dto.KnowledgeScopeDTO> kbScopes = scopes.get(kbId);
+            if (kbScopes == null || kbScopes.isEmpty() || scopeMatches(analysis, kbScopes)) filtered.add(kbId);
         }
         return filtered;
     }
 
-    /** scope 匹配: 城市精确优先于省份; 产品 scope 有配置才过滤 */
     private boolean scopeMatches(QueryAnalysis analysis,
-                                 java.util.List<cn.iocoder.yudao.module.knowledge.api.dto.KnowledgeScopeDTO> kbScopes) {
+                                 List<cn.iocoder.yudao.module.knowledge.api.dto.KnowledgeScopeDTO> kbScopes) {
         boolean regionOk = true;
         if (StrUtil.isNotBlank(analysis.getCity())) {
             regionOk = kbScopes.stream().anyMatch(s -> "CITY".equals(s.getScopeType())
@@ -357,7 +344,7 @@ public class SearchService {
         }
         boolean productOk = true;
         if (analysis.getProducts() != null && !analysis.getProducts().isEmpty()) {
-            java.util.List<String> productScopes = kbScopes.stream()
+            List<String> productScopes = kbScopes.stream()
                     .filter(s -> "PRODUCT".equals(s.getScopeType()))
                     .map(cn.iocoder.yudao.module.knowledge.api.dto.KnowledgeScopeDTO::getScopeCode)
                     .filter(java.util.Objects::nonNull).toList();
@@ -369,49 +356,23 @@ public class SearchService {
         return regionOk && productOk;
     }
 
-    /**
-     * 解析知识库意图集(动态意图分类参考): kbIds 为空时回退用户可见知识库(需登录态)。
-     *
-     * @param kbIds 限定知识库编号列表(空 = 全部可见)
-     * @return 意图集(按名称去重; 解析失败/无意图返回空, 调用方回退固定枚举)
-     */
     List<IntentDTO> resolveIntents(List<Long> kbIds) {
         return resolveIntents(kbIds, SecurityFrameworkUtils.getLoginUserId());
     }
 
-    /**
-     * 解析知识库意图集(动态意图分类参考): 逐知识库拉取启用中意图, 按意图名跨库去重合并。
-     * <p>
-     * kbIds 为空时回退用户可见知识库(需 userId, 供 RPC 无登录态路径显式传递);
-     * 单库 RPC 失败仅跳过该库, 全部失败/无意图返回空列表 → 调用方回退固定枚举, 不阻断主链路。
-     * <p>
-     * 注意: 在 search() 流程中 kbIds 已在步骤 2 按可见集过滤且非空, 此处直接逐库拉取,
-     * 不会触发可见集回退, 避免重复 RPC。
-     *
-     * @param kbIds  限定知识库编号列表(空 = 全部可见)
-     * @param userId 用户编号(仅 kbIds 为空时用于回退可见集; RPC 路径显式传递)
-     * @return 意图集(按名称去重合并, 保持首次出现顺序)
-     */
     List<IntentDTO> resolveIntents(List<Long> kbIds, Long userId) {
         List<Long> ids = (kbIds != null && !kbIds.isEmpty()) ? kbIds
                 : (userId == null ? List.of() : new ArrayList<>(resultFilter.getVisibleKbIds(userId)));
-        if (ids.isEmpty()) {
-            return List.of();
-        }
-        // 去重: 同一知识库重复传入不重复 RPC
-        List<Long> distinctIds = ids.stream().distinct().collect(Collectors.toList());
+        if (ids.isEmpty()) return List.of();
+
+        List<Long> distinctIds = ids.stream().distinct().toList();
         Map<String, IntentDTO> byName = new LinkedHashMap<>();
         for (Long kbId : distinctIds) {
             try {
                 List<IntentDTO> intents = knowledgeApi.getKbIntents(kbId).getCheckedData();
-                if (intents == null) {
-                    continue;
-                }
+                if (intents == null) continue;
                 for (IntentDTO intent : intents) {
-                    // 按名称去重合并(跨库同名意图视为同一意图; 名称/说明已足够分类, kbId 可不参与)
-                    if (intent != null && StrUtil.isNotBlank(intent.getName())) {
-                        byName.putIfAbsent(intent.getName(), intent);
-                    }
+                    if (intent != null && StrUtil.isNotBlank(intent.getName())) byName.putIfAbsent(intent.getName(), intent);
                 }
             } catch (Exception e) {
                 log.warn("[resolveIntents][知识库 {} 意图获取失败, 跳过该库: {}]", kbId, e.getMessage());
@@ -420,7 +381,6 @@ public class SearchService {
         return new ArrayList<>(byName.values());
     }
 
-    /** 收集结果涉及的全部文档产品(逗号分隔字段展开) */
     private Set<String> collectDocProducts(List<RetrievalRespVO.ResultVO> results,
                                            Map<Long, ChunkDocInfoDTO> docInfoMap) {
         Set<String> products = new HashSet<>();
@@ -428,22 +388,17 @@ public class SearchService {
             ChunkDocInfoDTO info = docInfoMap.get(r.getChunkId());
             if (info != null && StrUtil.isNotBlank(info.getProducts())) {
                 for (String p : StrUtil.split(info.getProducts(), ',')) {
-                    if (StrUtil.isNotBlank(p)) {
-                        products.add(p.trim());
-                    }
+                    if (StrUtil.isNotBlank(p)) products.add(p.trim());
                 }
             }
         }
         return products;
     }
 
-    /** 向量通道召回: 变体整体 embedding, 失败跳过该通道(不阻断主链路) */
     private List<Map.Entry<Long, Double>> vectorSearch(List<String> variants, Long tenantId, List<Long> kbIds) {
         try {
             List<List<Float>> vectors = modelApi.embedding(variants).getCheckedData();
-            if (vectors == null || vectors.isEmpty()) {
-                return List.of();
-            }
+            if (vectors == null || vectors.isEmpty()) return List.of();
             return vectorSearcher.search(vectors, tenantId, kbIds, RECALL_TOP_K);
         } catch (Exception e) {
             log.warn("[vectorSearch][向量检索失败, 跳过向量通道: {}]", e.getMessage());
@@ -451,12 +406,9 @@ public class SearchService {
         }
     }
 
-    /** 去重取最高分(保留首次出现顺序, RRF 只依赖排名) */
     private List<Map.Entry<Long, Double>> dedupMax(List<Map.Entry<Long, Double>> list) {
         Map<Long, Double> map = new LinkedHashMap<>();
-        for (Map.Entry<Long, Double> e : list) {
-            map.merge(e.getKey(), e.getValue(), Math::max);
-        }
+        for (Map.Entry<Long, Double> e : list) map.merge(e.getKey(), e.getValue(), Math::max);
         return new ArrayList<>(map.entrySet());
     }
 
@@ -468,22 +420,22 @@ public class SearchService {
         vo.setRewrites(analysis.getRewrites());
         vo.setSubQuestions(analysis.getSubQuestions());
         vo.setSuccess(analysis.isSuccess());
-        vo.setRoute(resolveRoute(analysis)); // D3 路由标记
+        vo.setRoute(resolveRoute(analysis));
         return vo;
     }
 
-    /** D3 路由标记(轻量 QueryPlanner): 超范围→ABSTAIN; scope 过滤过→SCOPE_FILTER_HYBRID_RAG; 默认混合检索 */
+    /**
+     * Query Planner 路由：领域确定性分析结果优先；GENERAL 未提供 route 时再按旧逻辑回退。
+     */
     private String resolveRoute(QueryAnalysis analysis) {
-        if ("OUT_OF_SCOPE".equals(analysis.getIntent())) {
-            return "ABSTAIN";
-        }
+        if ("OUT_OF_SCOPE".equals(analysis.getIntent())) return "ABSTAIN";
+        if (StrUtil.isNotBlank(analysis.getRoute())) return analysis.getRoute();
         if (StrUtil.isNotBlank(analysis.getProvince()) || StrUtil.isNotBlank(analysis.getCity())) {
             return "SCOPE_FILTER_HYBRID_RAG";
         }
         return "HYBRID_RAG";
     }
 
-    /** F5 检索追踪落库(审计/评测; 失败不阻断) */
     private void recordTrace(String query, RetrievalRespVO resp, int variantCount, long startMs) {
         try {
             cn.iocoder.yudao.module.retrieval.dal.dataobject.trace.RetrievalTraceDO t =
@@ -522,22 +474,15 @@ public class SearchService {
         vo.setChunkMetadata(metadataMap.get(chunkId));
         vo.setRrfScore(rrfMap.get(chunkId));
         vo.setRerankScore(rerankScore);
-        // B3 父子扩展: 命中子块回带父块上下文(引用仍锚定命中子块, 父块仅上下文)
         Long parentId = parentMap.get(chunkId);
         if (parentId != null) {
             vo.setContextChunkId(parentId);
             vo.setContextContent(parentContents.get(parentId));
         }
-        // 命中通道按各通道去重后的命中集合精确标记
         List<String> channels = new ArrayList<>();
-        if (bm25HitIds.contains(chunkId)) {
-            channels.add("bm25");
-        }
-        if (vectorHitIds.contains(chunkId)) {
-            channels.add("vector");
-        }
+        if (bm25HitIds.contains(chunkId)) channels.add("bm25");
+        if (vectorHitIds.contains(chunkId)) channels.add("vector");
         vo.setChannels(channels);
         return vo;
     }
-
 }
